--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "howler": "^2.2.0",
     "mobile-drag-drop": "^2.3.0-rc.2",
     "vue": "^2.6.11",
     "whim-client-vue": "^1.2.4"
